--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="initial-scale=1, user-scalable=0" charset="UTF-8">
+    <title>移动端布局示例</title>
+    <link rel="stylesheet" href="css/index.css">
+</head>
+<body>
+    <h1>移动端布局示例</h1>
+    <ol>
+        <li>
+            <a href="center-box.html">水平垂直居中</a>
+        </li>
+        <li>
+            <a href="product-list.html">商品列表</a>
+        </li>
+        <li>
+            <a href="nav.html">不固定个数导航</a>
+        </li>
+        <li>
+            <a href="dialog.html">弹窗</a>
+        </li>
+        <li>
+            <a href="slide-layer.html">滑动浮层</a>
+        </li>
+        <li>
+            <a href="proportional.html">模块比例缩放</a>
+        </li>
+        <li>
+            <a href="layout-1.html">头尾固定，中间滑动1</a>
+        </li>
+        <li>
+            <a href="layout-2.html">头尾固定，中间滑动2</a>
+        </li>
+    </ol>
+</body>
+</html>
